# deepin-deepinid-client

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Develop.md  README.md  lupdate.sh
.reuse/: dep5
debian/: README.source  changelog  control  copyright  rules
debian/missing-sources/src/resource/web/: service_error.html
docs/: 系统登录认证接口.md
examples/unionid-app/: CMakeLists.txt  app.cpp  app.h  main.cpp
scripts/: update-po.bash
src/: CMakeLists.txt  deepinid_interface.cpp  deepinid_interface.h  login_page.cpp  login_page.h  login_view.cpp  login_view.h  login_window.cpp  login_window.h  main.cpp  sync_client.cpp  sync_client.h
src/data/: CMakeLists.txt  com.deepin.sync.Client.service
src/ipc/: const.h  dbuslogin1manager.cpp  dbusvariant.cpp  dbusvariant.h  deepinid_interface.h
src/resource/: resource.qrc
src/resource/privacy/: End-User-License-Agreement-en_US.md  End-User-License-Agreement-en_US.txt  End-User-License-Agreement-zh_CN.md  End-User-License-Agreement-zh_CN.txt  User-Experience-Program-License-Agreement-en_US.md  User-Experience-Program-License-Agreement-zh_CN.md  deepinid-CN-en_US.md  deepinid-CN-en_US.txt  deepinid-CN-zh_CN.md  deepinid-CN-zh_CN.txt  deepinid-Other-en_US.md  deepinid-Other-en_US.txt  deepinid-Other-zh_CN.md  deepinid-Other-zh_CN.txt
src/resource/privacy/End-User-License-Agreement-Community/: .~d User License Agreement for Deepin OS -20200803.docx  End-User-License-Agreement-CN-en_US.md  End-User-License-Agreement-CN-zh_CN.md
src/resource/privacy/End-User-License-Agreement-Home/: End-User-License-Agreement-Home-CN-en_US.md  End-User-License-Agreement-Home-Other-zh_CN.md
src/resource/privacy/End-User-License-Agreement-Professional/: End-User-License-Agreement-Professional-CN-en_US.md  End-User-License-Agreement-Professional-CN-zh_CN.md
src/resource/privacy/End-User-License-Agreement-Server/: End-User-License-Agreement-Server-CN-en_US.md  End-User-License-Agreement-Server-CN-en_US.txt  End-User-License-Agreement-Server-CN-zh_CN.md  End-User-License-Agreement-Server-Other-zh_CN.txt
src/resource/privacy/Privacy-Policy/: Privacy-Policy-CN-zh_CN.txt  Privacy-Policy-Other-en_US.md  Privacy-Policy-Other-zh_CN.md
src/resource/privacy/Privacy-Policy-Community/: Privacy-Policy-Other-en_US.md  Privacy-Policy-Other-zh_CN.md
src/resource/privacy/User-Experience-Program-License-Agreement/: User-Experience-Program-License-Agreement-Other-en_US.md  User-Experience-Program-License-Agreement-Other-zh_CN.md
src/resource/privacy/User-Experience-Program-License-Agreement-Community/: User-Experience-Program-License-Agreement-CN-en_US.md  User-Experience-Program-License-Agreement-Other-zh_CN.md
src/resource/web/: authorize.html  error.html  network_error.html  service_error.html  style.css  unknow_error.html
src/service/: authentication_manager.cpp  authentication_manager.h  authorize.h  session.cpp  session.h
src/ui/: login_page.h  login_window.cpp  login_window.h  sync_client.cpp  sync_client.h  update_client.cpp  update_client.h  web_event_delegate.cpp  web_event_delegate.h
src/utils/: hardwareinfo.cpp  hardwareinfo.h  utils.cpp  utils.h
translations/: deepin-deepinid-client.ts  deepin-deepinid-client_en_US.ts  deepin-deepinid-client_zh_CN.ts  deepin-deepinid-client_zh_HK.ts  deepin-deepinid-client_zh_TW.ts
